# ReCpp

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CLAUDE.md  CMakeLists.txt  CMakeSettings.json  LICENSE  Makefile  README.md  ReCpp.sln  circle.yml  conanfile.py  mamafile.py  run_android_tests  run_clang_tidy  shippable.yml  update_doc_linerefs.py
.circleci/: build_liblog.sh  config.yml  dedup_compile_commands.py  liblog_stderr.c
.circleci/android-qemu-sysroot-api29/: README.md
.claude/: CLAUDE.md
.github/: copilot-instructions.md
.semaphore/: semaphore.yml
MSVC/: ReCpp.vcxproj  ReCpp.vcxproj.filters  Tests.vcxproj  Tests.vcxproj.filters
cmake/: FindDWARF.cmake
rpp/: allocators.cpp  allocators.h  binary_reader.h  binary_reader.natvis  binary_reader_old.h  binary_readwrite.cpp  binary_readwrite.h  binary_serializer.cpp  binary_serializer.h  binary_stream.cpp  binary_stream.h  binary_writer.h  binary_writer_old.h  close_sync.h  collections.h  collections.natvis  concurrent_queue.h  condition_variable.cpp  condition_variable.h  config.h  coroutines.h  debugging.cpp  debugging.h  delegate.h  file_io.cpp  file_io.h  file_io.mm  future.h  json.cpp  json.h  memory_pool.h  minmax.h  obfuscated_string.h  paths.cpp  scope_guard.h  semaphore.h  sockets.cpp  sockets.h  sprint.cpp  sprint.h  (+14 more)
rpp/io/: file_io.cpp  file_io.h
src/: allocators.cpp  delegate.h  sockets.cpp  sockets.h
src/io/: file_io.cpp  file_io.h
src/rpp/: atomic_shared_ptr.h  atomic_timepoint.h  binary_reader.natvis  binary_serializer.h  binary_stream.cpp  binary_stream.h  bitutils.cpp  bitutils.h  close_sync.h  collections.h  concurrent_queue.h  condition_variable.cpp  condition_variable.h  config.h  coroutines.h  debugging.cpp  debugging.h  delegate.h  endian.h  event_loop.cpp  event_loop.h  file_io.cpp  file_io.h  future.h  future_types.h  jni_cpp.cpp  jni_cpp.h  json.cpp  load_balancer.cpp  load_balancer.h  log_colors.h  math.h  memory_pool.h  minmax.h  mutex.cpp  mutex.h  obfuscated_string.h  paths.cpp  paths.h  paths.inl  (+32 more)
tests/: TempFILE.h  delegate.cpp  file_io.cpp  main.cpp  mingw.thread.h  test_allocators.cpp  test_atomic_shared_ptr.cpp  test_atomic_timepoint.cpp  test_binary_stream.cpp  test_bitutils.cpp  test_close_sync.cpp  test_collections.cpp  test_concurrent_queue.cpp  test_condition_variable.cpp  test_coroutines.cpp  test_cppsockets.cpp  test_debugging.cpp  test_delegate.cpp  test_endian.cpp  test_event_loop.cpp  test_file_io.cpp  test_future.cpp  test_json.cpp  test_memory_pool.cpp  test_minmax.cpp  test_mutex.cpp  test_obfuscated_string.cpp  test_scope_guard.cpp  test_semaphore.cpp  test_serialization.cpp  test_shm_concurrent_queue.cpp  test_sockets.cpp  test_sort.cpp  test_sprint.cpp  test_stack_trace.cpp  test_strview.cpp  test_task.cpp  test_thread_pool.cpp  test_threadpool.cpp  test_timer.cpp  (+4 more)
